// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRouteData should return first section if pagePerSection and hash is empty 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "components": Array [
        Object {
          "module": 1,
          "name": "Button",
          "props": Object {
            "displayName": "Button",
            "examples": Array [
              "example 0",
              "example 1",
            ],
          },
        },
        Object {
          "module": 2,
          "name": "Image",
          "props": Object {
            "displayName": "Image",
          },
        },
      ],
      "exampleMode": "collapse",
      "name": "Components",
      "sectionDepth": 0,
      "sections": Array [],
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return not found if pagePerSection and hash is #/Buttons/Label/Not 1`] = `
Object {
  "displayMode": "notFound",
  "sections": Array [],
}
`;

exports[`getRouteData should return one component 1`] = `
Object {
  "displayMode": "component",
  "sections": Array [
    Object {
      "components": Array [
        Object {
          "module": 1,
          "name": "Button",
          "props": Object {
            "displayName": "Button",
            "examples": Array [
              "example 0",
              "example 1",
            ],
          },
        },
      ],
      "exampleMode": "collapse",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one component if pagePerSection and hash is #/Buttons/Label 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "components": Array [
        Object {
          "module": 1,
          "name": "Label",
        },
      ],
      "exampleMode": "collapse",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one example from a component 1`] = `
Object {
  "displayMode": "example",
  "sections": Array [
    Object {
      "components": Array [
        Object {
          "module": 1,
          "name": "Button",
          "props": Object {
            "displayName": "Button",
            "examples": Array [
              "example 1",
            ],
          },
        },
      ],
      "exampleMode": "collapse",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one example from a section 1`] = `
Object {
  "displayMode": "example",
  "sections": Array [
    Object {
      "components": Array [],
      "content": Array [
        "example 1",
      ],
      "exampleMode": "collapse",
      "name": "Section",
      "sectionDepth": 0,
      "sections": Array [],
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one section 1`] = `
Object {
  "displayMode": "section",
  "sections": Array [
    Object {
      "components": Array [],
      "content": Array [
        "example 0",
        "example 1",
      ],
      "exampleMode": "collapse",
      "name": "Section",
      "sectionDepth": 0,
      "sections": Array [],
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one section if pagePerSection and hash is #/Section 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "components": Array [],
      "content": Array [
        "example 0",
        "example 1",
      ],
      "exampleMode": "collapse",
      "name": "Section",
      "sectionDepth": 0,
      "sections": Array [],
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one section without components if pagePerSection and hash is #/Buttons 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "components": Array [],
      "exampleMode": "collapse",
      "name": "Buttons",
      "sectionDepth": 2,
      "sections": Array [],
      "usageMode": "collapse",
    },
  ],
}
`;
